[package]
name = "qdum-vault"
version = "0.3.1"
edition = "2021"
authors = ["QDUM Team"]
description = "Quantum-resistant vault CLI for Solana using SPHINCS+ post-quantum signatures"
readme = "README.md"
homepage = "https://github.com/quantdum/qdum-vault"
repository = "https://github.com/quantdum/qdum-vault"
license = "MIT"
keywords = ["solana", "quantum", "post-quantum", "sphincs", "cryptography"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "color"] }

# Solana
solana-sdk = "2.0"
solana-client = "2.0"

# Post-quantum crypto
fips205 = { version = "0.4", default-features = false, features = ["slh_dsa_sha2_128s", "default-rng"] }

# Utilities
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1"
indicatif = "0.17"
comfy-table = "7.1"
dirs = "5.0"

# Crypto utilities
bs58 = "0.5"
sha2 = "0.10"
hex = "0.4"

[patch.crates-io.curve25519-dalek]
git = "https://github.com/solana-labs/curve25519-dalek.git"
rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
