[package]
name = "pqcoin"
version = "1.8.0"
edition = "2021"
authors = ["pqcash Team"]
description = "pqcoin - Post-quantum digital currency using SPHINCS+ signatures"
readme = "README.md"
homepage = "https://github.com/quantdum/pqcoin"
repository = "https://github.com/quantdum/pqcoin"
license = "MIT"
keywords = ["solana", "quantum", "post-quantum", "sphincs", "cryptography"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "color"] }

# Solana
solana-sdk = "2.0"
solana-client = "2.0"
solana-account-decoder = "2.0"
spl-token-2022 = { version = "4.0", features = ["no-entrypoint"] }
spl-transfer-hook-interface = "0.7"
spl-tlv-account-resolution = "0.7"

# Post-quantum crypto
fips205 = { version = "0.4", default-features = false, features = ["slh_dsa_sha2_128s", "default-rng"] }

# Utilities
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1"
indicatif = "0.17"
comfy-table = "7.1"
dirs = "5.0"
libc = "0.2"
chrono = "0.4"

# Enhanced CLI
inquire = "0.7"
ratatui = "0.28"
crossterm = "0.28"
arboard = "3.4"

# Crypto utilities
bs58 = "0.5"
sha2 = "0.10"
hex = "0.4"

[patch.crates-io.curve25519-dalek]
git = "https://github.com/solana-labs/curve25519-dalek.git"
rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
